# AutoFuzSlpPos

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  ChangeLog.md  Firewall_for_Windows.bat  README  README.md  README_CN.md  ReleaseNotes.md  appveyor.yml  config.html  genindex.html  index.html  objects.inv  params.json  py-modindex.html  py27AutoFuzSlpPos_env.yml  pyAutoFuzSlpPos_env.yml  requirements.txt  search.html  searchindex.js  update_docs.sh
.github/workflows/: Build_on_Linux.yml
_modules/: index.html
_modules/autofuzslppos/: Config.html
_sources/: config.rst.txt  index.rst.txt
autofuzslppos/: CMakeLists.txt  Config.py  FuzSlpPosProfile.py  FuzzySlpPosInference.py  Nomenclature.py  ParasComb.py  PreProcessing.py  RidgeExtraction.py  SelectTypLoc.py  TauDEM.py  TauDEMExtension.py  Util.py  __init__.py  main.py  requirements.txt  run_demo_data_bydefault.py
autofuzslppos/src/: CMakeLists.txt  Curvaturemn.cpp  D8DistUpToRidge.cpp  D8DistUpToRidgemn.cpp  D8FlowDirmn.cpp  DinfDistDown.cpp  DinfDistUpToRidge.cpp  DinfDistUpToRidge.h  DinfDistUpToRidgemn.cpp  DinfFlowDirmn.cpp  DropAnalysis.cpp  DropAnalysis.h  DropAnalysismn.cpp  FuzzySlpPosInference.cpp  HardenSlpPos.cpp  HardenSlpPos.h  HardenSlpPosmn.cpp  Node.h  PitRemovemn.cpp  RPISkidmore.cpp  RPISkidmore.h  RPISkidmoremn.cpp  ReadOutlets.cpp  RidgeExtraction.cpp  RidgeExtractionmn.cpp  SelectTypLocSlpPos.cpp  SelectTypLocSlpPos.h  SelectTypLocSlpPosmn.cpp  SimpleCalculator.cpp  SimpleCalculatormn.cpp  Thresholdmn.cpp  aread8.h  areadinf.cpp  areadinf.h  areadinfmn.cpp  commonLib.cpp  commonLib.h  connectdown.cpp  connectdown.h  dinf.cpp  (+7 more)
autofuzslppos/src/shapelib/: shptree.c
autofuzslppos/taudem_ext/.github/workflows/: Build_on_Linux.yml  Build_on_Windows.yml  Build_on_macOS.yml
autofuzslppos/taudem_ext/src/: commonLib.h
autofuzslppos/taudem_ext/src_ext/: Curvaturemn.cpp  RPISkidmore.cpp  demoLogOperator.cpp  demoLogOperatormn.cpp
autofuzslppos/taudem_ext/src_ext/autofuzslppos/: FuzzySlpPosInferencemn.cpp  RidgeExtractionmn.cpp  stats.cpp  stats.h
data/: cwt.ini  pv.ini  pv_dgpm.ini  test.ini  ywz.ini  ywz_dgpm.ini
data/Jamaica/: Data source.txt  Jamaica.ini  Jamaica_base.ini  Jamaica_contour10.shp  Jamaica_demo.ini  Jamaica_dgpm.ini  README.md  README.txt
data/PleasantValley/: contour_10.dbf  contour_10.sbn  contour_10.sbx  contour_10.shp  contour_10.shx  outlet.dbf  outlet.sbn  outlet.sbx  outlet.shp  outlet.shx  pvdem.tif
data/demo_data/: Jamaica_cluster.ini  Jamaica_demo.ini  Jamaica_windows.ini  README.txt
data/demo_data/output_fuzzy_slope_positions/DinfpreDir/: D8ContriArea.tif  D8Slp.tif  D8StreamNet.dbf  D8StreamNet.shx  DinfContriArea.tif  DinfSlp.tif  DinfStream.tif  PkrDglStream.tif  Subbasins.tif  dem.tif  dist2rdg.tif  dist2vly.tif  drpFile.txt  outlet.dbf  outlet.shx  outletM.dbf  vlysrc.tif
data/demo_data/output_fuzzy_slope_positions/FuzzySlpPos/: BksInf.tif  MaxSimilarity.tif  ShdInf.tif
data/demo_data/output_fuzzy_slope_positions/Log/: log_all.txt
data/demo_data/output_fuzzy_slope_positions/Params/: HAND.tif  Slp.tif
data/demo_data/output_fuzzy_slope_positions/TypLoc/: FtsTyp.tif  RdgTyp.tif  VlyTyp.tif
data/demo_data_cageo/dem/: Jamaica_contour10.dbf  Jamaica_contour10.sbn  Jamaica_contour10.sbx  Jamaica_contour10.shx
data/demo_data_cageo/output_fuzzy_slope_positions/DinfpreDir/: D8FlowDir.tif  D8StreamNet.shp  D8Streamord.tif  DinfFlowDir.tif  NetCoord.txt  NetTree.txt  demfil.tif  (+3 more)
data/tutorial/: Jamaica_t3.ini  readme.md
demo/: demo_flowdir_comp.py  demo_fuzslppos.py  demo_hillslope.py  hillslope_delineation.py
doc/: subtree.txt  update_docs.sh
doc/ci/appveyor/: download.ps1  install-msmpi.ps1  install-python.ps1  run_with_env.cmd
doc/docstring/: Makefile  conf.py  config.rst  index.rst  make.bat
docker/: Dockerfile
exec_linux/: aread8  areadinf  connectdown  curvature  d8distdowntostream  d8distuptoridge  d8flowdir  dgpm  dinfdistdown  dinfdistuptoridge  dinfflowdir  dropanalysis  fuzzyslpposinference  hardenslppos  moveoutletstostreams  peukerdouglas  pitremove  rpiskidmore  selecttyplocslppos  simplecalculator  streamnet  threshold
exec_linux_x86/: aread8  areadinf  connectdown  curvature  d8distdowntostream  d8distuptoridge  d8flowdir  dgpm  dinfdistdown  dinfdistuptoridge  dinfflowdir  dropanalysis  fuzzyslpposinference  hardenslppos  moveoutletstostreams  pitremove  pitremoveplanchon  rpiskidmore  selecttyplocslppos  simplecalculator  threshold
exec_win/: Firewall_for_Windows.bat
py_main/: .AutoFuzSlpPos_main.py.swp  .Config.swp  .config.py.swp  AutoFuzSlpPos_main.py  Config.py  Config.py.bak  Config.py~  Config_Heshan.py  Config_PleasantValley.py  Config_Sanxia.py  FuzSlpPosProfile.py  FuzzySlpPosInference.py  Jamaica.ini  Nomenclature.py  ParasComb.py  PreProcessing.py  RidgeExtraction.py  SelectTypLoc.py  TIFFConvert.py  TauDEM.py  TauDEM.py~  Util.py  main.py  pbs_dgpm.sh  requirements.txt
src/: .SelectTypLocSlpPos.cpp.swp  CMakeLists.txt  CMakeLists.txt.back  ConnectDown.cpp  ConnectDownmn.cpp  Curvature.cpp  Curvaturemn.cpp  D8DistDownToStream.cpp  D8DistDownToStreammn.cpp  D8DistUpToRidge.cpp  D8DistUpToRidgemn.cpp  D8FlowDirmn.cpp  D8FlowPathExtremeUpmn.cpp  D8HDistToStrm.cpp  D8HDistToStrmmn.cpp  D8flowpathextremeup.cpp  DinfAvalanche.cpp  DinfAvalanchemn.cpp  DinfConcLimAccum.cpp  DinfConcLimAccummn.cpp  DinfDecayAccummn.cpp  DinfDistDown.cpp  DinfDistDown.h  DinfDistDownmn.cpp  DinfDistUp.cpp  DinfDistUp.h  DinfDistUpToRidge.cpp  DinfDistUpToRidge.h  DinfDistUpToRidgemn.cpp  DinfDistUpmn.cpp  DinfFlowDirmn.cpp  DinfRevAccum.cpp  DinfRevAccummn.cpp  DinfTransLimAccum.cpp  DinfTransLimAccummn.cpp  DinfUpDependence.cpp  DinfUpDependencemn.cpp  DropAnalysis.cpp  DropAnalysismn.cpp  FuzzySlpPosInference.cpp  (+74 more)
src/shapelib/: README.txt  dbfopen.c  safileio.c  shapefil.h  shpopen.c
src_ext/: Curvature.cpp  D8DistUpToRidge.cpp  DinfDistUpToRidge.cpp
src_ext/autofuzslppos/: SelectTypLocSlpPos.cpp
test/: AutoFuzSlpPos_Runtime.sh  AutoFuzSlpPos_Threshold.sh  Commands.txt  __init__.py  run_demo_data_bydefault.py
(+30 files in other folders)
